--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@
     height: calc(100% - theme("spacing.20"));
   }
   .section-title {
-    @apply text-xl sm:text-3xl font-bold;
+    @apply text-xl sm:text-2xl font-semibold;
     letter-spacing: -0.04em;
   }
   .item-title {
